--- a/NUFSCar/app/src/main/AndroidManifest.xml
+++ b/NUFSCar/app/src/main/AndroidManifest.xml
@@ -10,25 +10,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".view.BaseActivity"
             android:label="@string/title_activity_base"
             android:theme="@style/AppTheme.NoActionBar">
 
+        </activity>
+        <activity android:name=".view.EventsDetailsActivity" />
+        <activity android:name=".view.NewsDetailsActivity" />
+        <activity android:name=".view.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
-
-        <activity android:name=".view.EventsDetailsActivity"></activity>
-        <activity android:name=".view.NewsDetailsActivity"></activity>
-
-
     </application>
 
 </manifest>
